# Agentic-AI-Voyage

./: .gitignore  privacy-policy.html  render.yaml
01_Distraction_Killer_chrome_plugin/: .gitignore  GAMIFICATION_EXAMPLES.md  GAMIFICATION_README.md  INSTALLATION.md  QUICK_START.md  README.md  REPORTS_GUIDE.md  TROUBLESHOOTING.md  background.js  blocked.html  blocked.js  content.js  create_icons.html  create_icons.py  gamification-service.js  gamification-ui.js  gamification.js  generate_icons.html  manifest.json  popup.html  popup.js  popup_fixed.html  popup_simple.html  privacy-policy.html  reports.html  reports.js  settings.html  settings.js  social_blocklist.json  test-categories.html  test-comprehensive-blocking.html  test-extension.html  test-gamification-fix.html  test-gamification-reports.html  test-keyword-blocking.html  test-loading.html  test-porn-blocklist.html  test-quota-fix.html  test-session-status.html  test-settings.html  (+3 more)
01_Distraction_Killer_chrome_plugin/docs/: context.md
01_Distraction_Killer_chrome_plugin/src/background/: service-worker.js
01_Distraction_Killer_chrome_plugin/src/ui/: blocked.js  (+7 more)
01_Distraction_Killer_chrome_plugin/styles/: blocked.css  popup.css  reports.css  settings.css  themes.css
01_FocusedRoom/: context.md  manifest.json  rules.md
02_FocusedRoom_website/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  BLOG_ENGAGEMENT_SYSTEM.md  BLOG_ENGAGEMENT_V2_UPDATES.md  CLEANUP_COMPLETE.md  CURSOR_CONTEXT.md  DATABASE_SCHEMA.md  DEBUG_BIGFIVE.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile  EMAIL_CAMPAIGN_READY.md  FINAL_STATUS.md  FOCUSED_ROOM_VISION.md  IMPLEMENTATION_GUIDE.md  MOBILE_MENU_FIX.md  MOBILE_MENU_VISUAL_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_READY.md  README.md  docker-compose.yml  migrate_blog_engagement.py  migrate_db.py  preview_emails.py  pyproject.toml  render.yaml  requirements.txt  run.py  send_to_production_users.py  start_pr_c_fix.sh  test_send_emails.py  test_subscribe_integration.py
02_FocusedRoom_website/.github/: MILESTONE_7_SPEC.md
02_FocusedRoom_website/.github/workflows/: ci.yml
02_FocusedRoom_website/app/: __init__.py  config.py  models.py  routes.py
02_FocusedRoom_website/app/blog_content/: brain-on-distraction.html  deep_work.html  science-of-deep-work.html
02_FocusedRoom_website/app/static/: blog_data.json  robots.txt
02_FocusedRoom_website/app/static/css/: main.css
02_FocusedRoom_website/app/static/js/: main.js
02_FocusedRoom_website/app/templates/: base.html  bigfive.html  blog_list.html  blog_post.html  features.html  index.html  privacy.html
02_FocusedRoom_website/app/utils/: bigfive.py  emailer.py  gemini_client.py  rate_limiter.py  report_generator.py  seo.py  validators.py
02_FocusedRoom_website/docs/: DESIGN_SYSTEM.md
02_FocusedRoom_website/email_previews/: 01_welcome_vision.html  02_big_five_report.html
02_FocusedRoom_website/instance/: focusedroom.db
02_FocusedRoom_website/tests/: conftest.py  test_bigfive.py  test_ci.py  test_deployment.py  test_gemini.py  test_seo.py  test_subscribe.py
03_FocusedRoom_app/: .cursorrules  App.tsx  FOLDER_STRUCTURE.md  INSTALL_AND_RUN.md  PRD.md  PRD_COMMUNITY_FEATURES.md  PRD_PART2.md  PRD_PART3.md  PRD_PART4.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  START_HERE.md  STATUS.md  TASKS.md  app.json  babel.config.js  env.example  index.js  package.json  run_android.sh  run_ios.sh  tsconfig.json
03_FocusedRoom_app/android/: build.gradle  gradle.properties
docs/: privacy-policy.html
(+35 files in other folders)
